--- a/templates/home.html
+++ b/templates/home.html
@@ -5,21 +5,27 @@
 <head>
     <meta charset="UTF-8">
     <title>RP Flask REST API</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/people.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/note.css') }}"
 </head>
 <body>
     <h1>
         Hello, People!
     </h1>
-    {% for person in people %}
-    <h2>{{ person.fname }} {{ person.lname }}</h2>
-    <ui>
-        {% for note in person.notes %}
-        <li>
-            {{ note.content }}
-        </li>
+   
+    <div class="person-create-card">
+        {% include "_person_create_form.html" %}
+    </div>
+    <div class="people-list">
+        {% for person in people %}
+             {% include "_person_content.html" %}
         {% endfor %}
-    </ui>
-    {% endfor %}
+    </div>
+
+    {% if config['DEBUG'] %}
+        {% include "_debug.html" %}
+    {% endif %}
 
 </body>
 </html>
